k8s/gotify/gotify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify-http
spec:
  selector:
    app: gotify
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
